# one-rom

./: .gitignore  CHANGELOG.md  INSTALL.md  Makefile  README.md
.github/workflows/: ci.yml
ci/: rust-docs.sh  rust-tests.sh  rust-tools.sh  test-pios.sh  tests.txt
ci/docker/: Dockerfile  README.md  build-release.sh  build.sh  common.sh
ci/docker/container-scripts/: clone.sh  copy-fw.sh  welcome.sh
docs/: CHIP-TYPES.md  FAQ.md  ROMS-GLORIOUS-ROMS.md  VOLTAGE-LEVELS.md
hardware/3d/: README.md
hardware/3d/cases/: README.md  cap-with-header-pins.stl  case-24-with-header-pins.stl  case-28-with-header-pins.stl  case-40-with-header-pins.stl
hardware/pcb/: PANELISING.md  README.md
hardware/pcb/verified/: README.md
images/test/: rand_128KB.rom  rand_2048.rom  rand_32768.rom
onerom-config/: README.md  bbc-model-b-filing.json  sample.json  schema.json
onerom-config/test/: 32-random-27c080.json  40-random-27c400.json
plugins/: README.md  RELEASE.md
plugins/scripts/: build-release-all.sh  build-release.sh  release.py
plugins/system/usb/: CHANGELOG.md  Makefile  README.md  plugin-meta.json  tinyusb.mk  usb.ld
plugins/user/activity/: Makefile
releases/: manifest-v0.6.2.json  manifest-v0.6.3.json  manifest-v0.6.7.json  manifest-v0.6.8.json  releases.json
rust/cli/: CHANGELOG.md  Cargo.toml  README.md
rust/cli/src/: control.rs  (+8 more)
rust/config/: Cargo.toml
rust/fw/: Cargo.toml
rust/lab-new/: Cargo.toml  README.md  build.rs
rust/lab-new/scripts/: build-all.sh
rust/lab-new/src/: error.rs  hw.rs  main.rs  rom.rs
rust/schema-gen/: Cargo.toml
rust/sdrr-fw-parser/: Cargo.toml
rust/sdrr-gen/: Cargo.toml
rust/sdrr-info/: Cargo.toml
rust/studio/: CHANGELOG.md  Cargo.toml
sdrr/: Makefile  test.mk
sdrr-pcb/: PANELISING.md  README.md
sdrr/include/: config_base.h  enums.h  functions.h  include.h  reg-rp235x.h  rp235x_inlines.h  types.h
sdrr/link/: common.ld
sdrr/ora/: api.h  plugin.h  plugin.ld  plugin.mk  system.h
sdrr/src/: constants.c  main.c  plugin.c  rom_impl.c  rp235x.c  stm32f4.c  utils.c  vector.c
sdrr/test/: test_gpio.c  test_log.c
test/: Makefile
test/include/: json-config.h  roms-test.h
test/src/: check-roms.c  json-config.c  query-roms.c
(+106 files in other folders)
