[package]
name = "onerom-lab-new"
version = "0.1.0"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "One ROM Lab (V2)"
repository = "https://github.com/piersfinlayson/one-rom"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "rom", "eeprom", "eprom", "flash"]

[[bin]]
name = "onerom-lab-fire"
path = "src/main.rs"

[features]
default = [ "fire-40-a" ]
fire-24-e = [ "rp2350a", "pin-24", "eprom-8bit" ]
fire-28-a = [ "rp2350a", "pin-28", "eprom-8bit" ]
fire-32-a = [ "rp2350b", "pin-32", "eprom-8bit" ]
fire-40-a = [ "rp2350b", "pin-40", "eprom-16bit" ]
pin-24 = []
pin-28 = []
pin-32 = []
pin-40 = []
eprom-8bit = []
eprom-16bit = []
rp2350a = [ "embassy-rp/rp235xa" ]
rp2350b = [ "embassy-rp/rp235xb" ]
usb = ["embassy-usb","panic-probe"]

[dependencies]
onerom-protocol = { version = "0.1.0" }
onerom-database = { path="../database", version = "0.1.1" }

airfrog-rpc = { version = "0.1.1" }
embassy-executor = { version = "0.9.0", features = ["executor-thread", "arch-cortex-m", "nightly" ]}
embassy-futures = { version = "0.1.1" }
embassy-rp = { version = "0.8.0", features = [ "rt", "unstable-pac", "time-driver", "intrinsics", "critical-section-impl", "imagedef-secure-exe", "boot2-generic-03h" ], optional = true }
embassy-sync = { version = "0.7.0" }
embassy-time = { version = "0.5", features = [ "generic-queue-8" ] }
embassy-usb = { version = "0.5", optional = true }
embedded-alloc = { version = "0.7" }
portable-atomic = { version = "1.10", features = [ "critical-section" ] }
cortex-m = { version = "0.7.6", features = [] }
cortex-m-rt = { version = "0.7.0"}
static_cell = { version = "2.1", features = [ "nightly" ] }
embedded-hal = { version = "1.0.0"}
critical-section = { version = "1.2.0" }
hex = { version = "0.4", default-features = false, features = [ "alloc" ] }
hex-literal = "1.0.0"
log = "0.4"
sha1 = { version = "0.10", default-features = false }
rtt-target = { version = "0.6", features = [ "log" ] }
panic-probe = { version = "1.0", optional = true }
panic-rtt-target = "0.2"

[build-dependencies]
built = "0.8"
csv = "1.3"
